--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,11 @@
-!!!
+doctype
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+
+    block head
+
+  body
+    div#content
+      block content
