--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype
 html
   head
     title= title
+    include ./partials/head.jade
     link(rel='stylesheet', href='/stylesheets/style.css')
 
     block head
