--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype
 html
   head
     title= title
-    include ./partials/head.jade
+    link(rel="stylesheet", href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,200italic,300italic,400italic,600italic,700italic')
     link(rel='stylesheet', href='/stylesheets/style.css')
 
     block head
