--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block head
-  script(type="text/javascript", src="/javascripts/demo/demoController")
+  script(type="text/javascript", src="/javascripts/demo/demoController.js")
   
 block content
 
