added all buttons to demo.jade

--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -32,10 +32,47 @@ block content
           div#annotationsDelete
     li Contributions
       ul
-        li
+        li Get all contributors for a medical image
+          button Submit
+          div Response: 
+          div#contributorsGet
+        li Add a new contributor from an image
+          button Submit
+          div Response: 
+          div#contributorsCreate
+        li Delete a contributor from an image
+          button Submit
+          div Response: 
+          div#contributorsDelete
     li MedImages
       ul
-        li
+        li Get a medical image
+          button Submit
+          div Response: 
+          div#imagesGet
+        li Create a medical image
+          button Submit
+          div Response: 
+          div#imagesCreate
+        li Delete an image
+          button Submit
+          div Response: 
+          div#imagesDelete
     li Tags
       ul
-        li
+        li Get all tags for a medical image
+          button Submit
+          div Response: 
+          div#tagsGet
+        li Add a new tag to an image
+          button Submit
+          div Response: 
+          div#tagsAdd
+        li Remove an existing tag from an image
+          button Submit
+          div Response: 
+          div#tagsRemove
+        li Get images with the following tags
+          button Submit
+          div Response: 
+          div#tagsPhotoGet
