response from annotation demo buttons

--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -15,19 +15,19 @@ block content
     li Annotations
       ul
         li Get all annotations for a medical image
-          button Submit
+          button#annotationsGetBtn Submit
           div Response: 
           div#annotationsGet
         li Create a new annotation
-          button Submit
+          button#annotationsCreateBtn Submit
           div Response: 
           div#annotationsCreate
         li Edit an existing annotation
-          button Submit
+          button#annotationsEditBtn Submit
           div Response: 
           div#annotationsEdit
         li Delete an annotation
-          button Submit
+          button#annotationsDeleteBtn Submit
           div Response: 
           div#annotationsDelete
     li Contributions
