--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,11 @@ doctype
 html
   head
     title= title
-    link(rel="stylesheet", href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,200italic,300italic,400italic,600italic,700italic')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,200italic,300italic,400italic,600italic,700italic")
+    link(rel="stylesheet", href="/stylesheets/style.css")
+
+    script(type='text/javascript', src='http://code.jquery.com/jquery-1.10.1.min.js')
+    script(type='text/javascript', src='http://code.jquery.com/jquery-migrate-1.2.1.min.js')
 
     block head
 
