--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -17,77 +17,132 @@ block content
     li Annotations
       ul
         li Get all annotations for a medical image
-          form#annotationsGetForm(name="annotationsGetForm")
-            span Image id: 
-            input#imageId(required)
-            br
-            input(type="submit")
-          div Response: 
-          div.responseDiv#annotationsGet
+          legend
+            form#annotationsGetForm(name="annotationsGetForm")
+              input#imageId(placeholder="Image id", required)
+              br
+              input(type="submit")
+              br
+          legend
+            div Response: 
+            div.responseDiv#annotationsGet
         li Create a new annotation
-          form#annotationsCreateForm(name="annotationsCreateForm")
-            input(type="submit")
-          div Response: 
-          div.responseDiv#annotationsCreate
+          legend
+            div Point annotation
+            form#pointAnnotationsCreateForm(name="pointAnnotationsCreateForm")
+              input(name="text", placeholder="Annotation text", required) 
+              br
+              input(name="image_id", placeholder="Image id", required) 
+              br
+              input(name="start_x", placeholder="Start X", required) 
+              br
+              input(name="start_y", placeholder="Start Y", required) 
+              br
+              input(name="type", value="point", type="hidden") 
+              input(type="submit") 
+              br
+
+          legend
+            div Response: 
+            div.responseDiv#pointAnnotationsCreate
+
+          legend
+            div Range annotation
+            form#rangeAnnotationsCreateForm(name="rangeAnnotationsCreateForm")
+              input(name="text", placeholder="Annotation text", required) 
+              br
+              input(name="image_id", placeholder="Image id", required) 
+              br
+              input(name="start_x", placeholder="Start X", required) 
+              br
+              input(name="start_y", placeholder="Start Y", required) 
+              br
+              input(name="end_x", placeholder="End X", required) 
+              br
+              input(name="end_y", placeholder="End Y", required) 
+              br
+              input(name="type", value="range", type="hidden") 
+              input(type="submit") 
+              br
+          legend
+            div Response: 
+            div.responseDiv#rangeAnnotationsCreate
         li Edit an existing annotation
-          form#annotationsEditForm(name="annotationsEditForm")
-            span Annotation id: 
-            input(name="annotationId", required)
-            input(type="submit")
-          div Response: 
-          div.responseDiv#annotationsEdit
+          legend
+            form#annotationsEditForm(name="annotationsEditForm")
+              input(name="annotationId", placeholder="Annotation id", required) 
+              br
+              input(type="submit") 
+              br
+          legend
+            div Response: 
+            div.responseDiv#annotationsEdit
         li Delete an annotation
-          form#annotationsDeleteForm(name="annotationsDeleteForm")
-            span Annotation id: 
-            input(name="annotationId", required)
-            input(type="submit")
-          div Response: 
-          div.responseDiv#annotationsDelete
+          legend
+            form#annotationsDeleteForm(name="annotationsDeleteForm")
+              span Annotation id: 
+              input(name="annotationId", placeholder="Annotation id", required) 
+              br
+              input(type="submit") 
+              br
+          legend
+            div Response: 
+            div.responseDiv#annotationsDelete
     li Contributions
       ul
         li Get all contributors for a medical image
           button Submit
-          div Response: 
-          div.responseDiv#contributorsGet
+          legend
+            div Response: 
+            div.responseDiv#contributorsGet
         li Add a new contributor from an image
           button Submit
-          div Response: 
-          div.responseDiv#contributorsCreate
+          legend
+            div Response: 
+            div.responseDiv#contributorsCreate
         li Delete a contributor from an image
           button Submit
-          div Response: 
-          div.responseDiv#contributorsDelete
+          legend
+            div Response: 
+            div.responseDiv#contributorsDelete
     li MedImages
       ul
         li Get a medical image
           button Submit
-          div Response: 
-          div.responseDiv#imagesGet
+          legend
+            div Response: 
+            div.responseDiv#imagesGet
         li Create a medical image
           form#uploadImageForm(name="uploadImage")
             input(type="file" name="medImage" required)
             input(type="submit")
-          div Response: 
-          div.responseDiv#imagesCreate
+          legend
+            div Response: 
+            div.responseDiv#imagesCreate
         li Delete an image
           button Submit
-          div Response: 
-          div.responseDiv#imagesDelete
+          legend
+            div Response: 
+            div.responseDiv#imagesDelete
     li Tags
       ul
         li Get all tags for a medical image
           button Submit
-          div Response: 
-          div.responseDiv#tagsGet
+          legend
+            div Response: 
+            div.responseDiv#tagsGet
         li Add a new tag to an image
           button Submit
-          div Response: 
-          div.responseDiv#tagsAdd
+          legend
+            div Response: 
+            div.responseDiv#tagsAdd
         li Remove an existing tag from an image
           button Submit
-          div Response: 
-          div.responseDiv#tagsRemove
+          legend
+            div Response: 
+            div.responseDiv#tagsRemove
         li Get images with the following tags
           button Submit
-          div Response: 
-          div.responseDiv#tagsPhotoGet
+          legend
+            div Response: 
+            div.responseDiv#tagsPhotoGet
