fixed search form

--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -160,7 +160,7 @@ block content
         li Get images with the following tags
           legend
             form#tagSearchForm(name="tagSearchForm")
-              input(name="tag", placeholder="Tag name's separated by a comma", required) 
+              input#tags(name="tag", placeholder="Tag name's separated by a comma", required) 
               br
               input(type="submit") 
             div Response: 
