adding new images shows response on page with image url

--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -138,7 +138,7 @@ block content
             input(type="submit")
           legend
             div Response: 
-            div.responseDiv#imagesCreate
+            div.responseDiv#medImageCreate
         li Delete an image
           button Submit
           legend
