updated schema of medimages and made related changes to view and controllers

--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -216,6 +216,8 @@ block content
           form#uploadImageForm
             input(type="text", name="user_id", placeholder="User ID", required)
             br
+            input(type="text", name="title", placeholder="Image Title", required)
+            br
             input(type="file", name="medImage", required)
             br
             input(type="submit")
