fixed get all med images to use username

--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -195,7 +195,7 @@ block content
         li Get medical images for a user
           legend
             form#medImageForUserForm
-              input(type="text", name="user_id", placeholder="User ID", required)
+              input(type="text", name="username", placeholder="Username", required)
               br
               input(type="submit")
               br
