converted medimages to use username instead of userid

--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -204,7 +204,7 @@ block content
             div.responseDiv#medImageForUser
         li Create a medical image
           form#uploadImageForm
-            input(type="text", name="user_id", placeholder="User ID", required)
+            input(type="text", name="username", placeholder="Username", required)
             br
             input(type="text", name="title", placeholder="Image Title", required)
             br
