--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -159,7 +159,7 @@ block content
         li Check if user has access to an image
           legend
             form#accessToImageForm
-              input(type="text", name="user_id", placeholder="User ID")
+              input(type="text", name="username", placeholder="Username")
               br
               input(type="text", name="image_id", placeholder="Image ID")
               br
@@ -171,7 +171,7 @@ block content
         li Add a new contributor from an image
           legend
             form#createContributionForm
-              input(type="text", name="user_id", placeholder="User ID", required)
+              input(type="text", name="username", placeholder="Username", required)
               br
               input(type="text", name="image_id", placeholder="Image ID", required)
               br
